# scale-bridge

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  install.sh  scale-bridge.service
.github/workflows/: ci.yml  release.yml
crates/scale-bridge-cli/: Cargo.toml
crates/scale-bridge-cli/src/: args.rs  generate.rs  main.rs  runner.rs  transport_builder.rs
crates/scale-bridge-cli/src/output/: csv.rs  json.rs  mod.rs  text.rs
crates/scale-bridge-cli/tests/: cli.rs
crates/scale-bridge-core/: Cargo.toml
crates/scale-bridge-core/src/: error.rs  lib.rs  protocol.rs  scale.rs
crates/scale-bridge-core/src/codec/: etx.rs  mod.rs
crates/scale-bridge-core/src/transport/: mock.rs  mod.rs  serial.rs  tcp.rs
crates/scale-bridge-scp01/: Cargo.toml
crates/scale-bridge-scp01/src/: command.rs  lib.rs  protocol.rs  response.rs  types.rs
crates/scale-bridge-scp01/src/parser/: mod.rs  status.rs  weight.rs
crates/scale-bridge-scp01/tests/: fuzz.proptest-regressions  fuzz.rs
crates/scale-bridge-server/: Cargo.toml
crates/scale-bridge-server/src/: lib.rs
docs/superpowers/plans/: 2026-03-28-scale-bridge.md
docs/superpowers/specs/: 2026-03-28-awt-scale-design.md  tmp-bugs.txt
hooks/: pre-push
