[workspace]
members = [
    "crates/scale-bridge-core",
    "crates/scale-bridge-scp01",
    "crates/scale-bridge-server",
    "crates/scale-bridge-cli",
]
resolver = "2"

[workspace.dependencies]
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
serialport = "4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
