[workspace]
members = [
    "crates/scale-bridge-core",
    "crates/scale-bridge-scp01",
    "crates/scale-bridge-server",
    "crates/scale-bridge-cli",
]
resolver = "2"

[workspace.dependencies]
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
serialport = "4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
