[package]
name = "scale-bridge-cli"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "scale-bridge"
path = "src/main.rs"

[[bin]]
name = "scale-bridge-generate"
path = "src/generate.rs"

[dependencies]
scale-bridge-core = { path = "../scale-bridge-core" }
scale-bridge-scp01 = { path = "../scale-bridge-scp01" }
scale-bridge-server = { path = "../scale-bridge-server" }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
serialport = { workspace = true }

[features]
default = ["serial"]
serial = ["scale-bridge-core/serial"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
