[package]
name = "scale-bridge-scp01"
version = "0.2.1"
edition = "2021"

[dependencies]
scale-bridge-core = { path = "../scale-bridge-core" }
rust_decimal = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rust_decimal = { workspace = true, features = ["macros"] }
rust_decimal_macros = "1"
