[package]
name = "scale-bridge-server"
version = "0.2.0"
edition = "2021"

[dependencies]
scale-bridge-core = { path = "../scale-bridge-core" }
scale-bridge-scp01 = { path = "../scale-bridge-scp01" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tokio = { workspace = true }
serialport = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tower = "0.5"
